--- a/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
@@ -26,7 +26,7 @@
     <ui:param name="_updates"          value="mainFRM:fileUploadFRM" />
     
     <!-- специфичные поля поиска -->
-    <ui:define name="searche">         
+    <ui:define name="searche"> 
         <p:outputLabel value="#{bundle.Company}:" indicateRequired="true"/>
         <p:selectOneMenu value="#{_bean.model.companySearche}" filter="true" converter="companyConvertor"                         
                         widgetVar="companySearche"
@@ -39,8 +39,9 @@
                                  value="#{_bean.model.fullTextSearche}">
         </p:selectBooleanCheckbox>
         
-        <p:selectCheckboxMenu value="#{_bean.model.docTypes}" label="#{bundle.DocTypeSelector}"
-                              widgetVar="cbmDocType"
+        <p:outputLabel value="#{bundle.DocTypes}:"/>
+        <p:selectCheckboxMenu value="#{_bean.model.docTypes}" 
+                              widgetVar="cbmDocType" multiple="true"
                               converter="docsTypesConvertor"
                               filter="true" filterMatchMode="startsWith" styleClass="ui-grid-col-12">
             <f:selectItems value="#{docTypeBean.findAll()}" var="item" itemLabel="#{item.getName()}" itemValue="#{item}"/>
@@ -63,18 +64,6 @@
                                  value="#{_bean.model.dateDocSearche}">
             <p:ajax event="change" update="pnDateDocSearche"/>
         </p:selectBooleanCheckbox>   
-        
-        <p:outputLabel value="#{bundle.FIO}:" rendered="false"/>
-        <h:panelGroup styleClass="ui-grid-col-12" rendered="false">
-            <div class="ui-inputgroup">
-                <p:inputText title="#{bundle.HelpSearcheContext}" value="#{_bean.model.fioSearche}"
-                         widgetVar="fioSearche"
-                         styleClass="ui-grid-col-12"
-                         onkeypress="keyPress();">
-                </p:inputText>
-                <p:commandButton styleClass="btnClear" icon="ui-icon-close" onclick="PF('fioSearche').jq.val('');"/>
-            </div>
-        </h:panelGroup>
         
         <h:panelGroup id="pnDateDocSearche" styleClass="ui-grid-col-12"> 
             <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-1, ui-grid-col-11" rendered="#{_bean.model.dateDocSearche}" styleClass="ui-grid-col-12">
@@ -108,7 +97,7 @@
                         styleClass="ui-grid-col-12">
                 <f:selectItems value="#{partnersBean.findAll()}" var="partner" itemValue="#{partner}" itemLabel="#{partner.nameEndElipse}" />
                 <f:selectItem value="#{null}" itemLabel="#{bundle.NotSpecified}" itemValue="#{null}"/>
-            </p:selectOneMenu>  
+        </p:selectOneMenu>  
     </ui:define>
     
     <!-- специфичные пункты в меню тулбара обозревателя -->
@@ -151,18 +140,27 @@
 
     <!-- специфичные поля таблицы обозревателя -->
     <ui:define name="specDetailColumns">
-        <p:column headerText="#{bundle.Company}" sortBy="#{item.company.name}" width="90" priority="3">
-            <h:outputText value="#{item.getClass().getSimpleName() == 'Doc' ? item.company.name : ''}"/>
+        <p:column id="colCompany" headerText="#{bundle.Company}" 
+                  visible="#{_detailBean.isVisibleColumn('colCompany')}"
+                  sortBy="#{item.companyName}" width="90" priority="3">
+            <h:outputText value="#{item.companyName}"/>
         </p:column>
         
-        <p:column headerText="#{bundle.Type}" sortBy="#{item.docType.name}" width="90" priority="4">
-            <h:outputText value="#{item.getClass().getSimpleName() == 'Doc' ? item.docType.name : bundle.Folder}"/>
+        <p:column id="colDocType" headerText="#{bundle.Type}" 
+                  visible="#{_detailBean.isVisibleColumn('colDocType')}"
+                  sortBy="#{item.docTypeName}" width="90" priority="4">
+            <h:outputText value="#{item.docTypeName}"/>
         </p:column>
 
-        <p:column headerText="#{bundle.Number}" sortBy="#{item.number}" width="80" priority="4"  >
+        <p:column id="colNumber" headerText="#{bundle.Number}" 
+                  visible="#{_detailBean.isVisibleColumn('colNumber')}"
+                  sortBy="#{item.regNumber}" width="80" priority="4"  >
             <h:outputText value="#{item.regNumber}"/>            
         </p:column>
-        <p:column headerText="#{bundle.Date}" width="80" priority="4"  sortBy="#{item.itemDate}">
+        
+        <p:column id="colItemDate" headerText="#{bundle.Date}" width="80" 
+                  visible="#{_detailBean.isVisibleColumn('colItemDate')}"
+                  sortBy="#{item.itemDate}" priority="3" >
             <h:outputLabel value="#{item.itemDate}">
                 <f:convertDateTime type="date" dateStyle="short" timeStyle="short" locale="#{sessionBean.locale}" timeZone="#{TimeZone.getDefault()}"/>
             </h:outputLabel>
@@ -197,7 +195,7 @@
                     actionListener="#{docBean.openAttacheAddForm(item)}"/>
         
         <p:menuitem icon="ui-icon-clipboard" value="#{bundle.AddVersionFromScan}"
-                    rendered="#{false or item.getClass().getSimpleName() == 'Doc'}"
+                    rendered="false"
                     actionListener="#{_bean.onSetCurrentItem(item)}"
                     oncomplete="document.getElementById('mainFRM:btnScan').click();"/> 
         
@@ -216,7 +214,7 @@
                     selection="#{_bean.procSelectedNode}" style="width: auto; overflow-y: auto;">
 
                 <p:treeNode type="tree" expandedIcon="ui-icon-folder-open" collapsedIcon="ui-icon-folder-collapsed">
-                    <h:outputText value="#{treeItem.getNameEndElipse()}" title="#{treeItem.name}"/>
+                    <h:outputText value="#{treeItem.nameEndElipse}" title="#{treeItem.name}"/>
                 </p:treeNode>
 
                 <p:ajax event="select" listener="#{_bean.onProcNodeSelect}"
