--- a/escom-bpm-web/src/main/webapp/view/templ/templ-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-explorer.xhtml
@@ -42,13 +42,13 @@
 
         <pe:layout fullPage="true" style="font-size: 80%;" stateCookie="#{_bean.getSourceBeanId() != null}">            
 
-            <pe:layoutPane id="west" position="west" rendered="#{_bean.isWestShow()}" resizable="true" size="22%" >
-                <h:form id="westFRM" style="font-size: 90%;  height: 100%;" onkeypress="checkEsc();">
+            <pe:layoutPane id="west" position="west" rendered="#{_bean.isWestShow()}" resizable="true" size="20%" >
+                <h:form id="westFRM" style="font-size: 90%;  height: 100%;" onkeypress="checkEsc();">                    
                     <ui:include src="/view/templ/tree/tree.xhtml" />
                 </h:form>
             </pe:layoutPane>
 
-            <pe:layoutPane id="east" position="east" rendered="#{_bean.isEastShow()}" resizable="true" size="22%">
+            <pe:layoutPane id="east" position="east" rendered="#{_bean.isEastShow()}" resizable="true" size="23%">
                 <h:form id="eastFRM" style="font-size: 90%;  height: 100%;" onkeypress="checkEsc();">
                     <p:focus context="eastFRM" for="eastFRM:nameSearche"/>           
                     <ui:include src="/view/templ/templ-searche.xhtml">
@@ -59,18 +59,25 @@
 
             <pe:layoutPane id="center" position="center" resizable="true" size="56%">
                 <h:form id="mainFRM" style="font-size: 90%; height: 100%;" styleClass="ui-grid-col-12" > 
+                    <p:remoteCommand name="dropToTree"  actionListener="#{_bean.dropToTree}"  oncomplete="initDND()"/>
+                    <p:remoteCommand name="dropToTable" actionListener="#{_bean.dropToTable}" oncomplete="initDND()"/>
+                    <p:remoteCommand name="dropToNavig" actionListener="#{_bean.dropToNavig}" oncomplete="initDND()"/>
+                    <p:remoteCommand name="formSize" immediate="true" actionListener="#{sessionBean.onFormSize()}" />                    
                     <p:panelGrid columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">
                         <p:toolbar id="explToolBar">
                             <f:facet name="left">
+                                <p:commandButton rendered="false" id="toggler" type="button" icon="ui-icon-calculator" 
+                                                 title="#{bundle.Columns}" style="float: left;">                                 
+                                </p:commandButton>            
+                                <p:columnToggler datasource="tblDetail" trigger="toggler">
+                                    <p:ajax event="toggle" listener="#{_detailBean.onToggle}" update="tblDetail" />
+                                </p:columnToggler>
+                                
                                 <p:commandButton id="btnRefreshRight" icon="ui-icon-refresh" 
                                                  title="#{bundle.Refresh}"                                  
-                                                 actionListener="#{_bean.reloadDetailsItems()}"
+                                                 actionListener="#{_bean.refreshLazyData()}"
                                                  update="mainFRM #{_updates}"
                                                  oncomplete="initDND()"/> 
-
-                                <span class="ui-separator">
-                                    <span class="ui-icon ui-icon-grip-dotted-vertical" />
-                                </span>
 
                                 <p:commandButton icon="ui-icon-arrowthick-1-n" title="#{bundle.Up}"
                                                  actionListener="#{_bean.onGotoUpLevelContent()}"
@@ -104,8 +111,8 @@
                                                  rendered="#{_treeBean == null or _bean.isShowTree()}" 
                                                  actionListener="#{_bean.onCreateDetailItem()}">
                                     <p:ajax event="dialogReturn" update="mainFRM" listener="#{_bean.onUpdateAfterCloseForm}" oncomplete="initDND();"/>
-                                </p:commandButton>                                    
-
+                                </p:commandButton>                                
+                                
                                 <p:commandButton value="#{bundle.SelectChecked}" icon="ui-icon-check" 
                                                  title="#{bundle.SelectChecked}"
                                                  disabled="#{_bean.checkedItems.isEmpty()}"
@@ -167,7 +174,7 @@
                                                 oncomplete="PF('statusDialog').hide(); initDND();"
                                                 actionListener="#{sessionBean.onViewHelp()}"/>
                                 </p:menuButton>
-                                
+                                                                
                                 <p:commandButton icon="ico_exit" value="#{bundle.CloseSession}" title="#{bundle.ExitProgramm}"
                                                 rendered="#{!_bean.selectorViewMode}"
                                                 onstart="return isClose = 1;"                                     
@@ -190,12 +197,6 @@
                     <ui:insert name="form_scripts"/>
 
                     <ui:include src="/view/common/confirm-dlg.xhtml"/>
-
-                    <p:remoteCommand name="formSize" immediate="true" actionListener="#{sessionBean.onFormSize()}" />
-
-                    <p:remoteCommand name="dropToTree"   actionListener="#{_bean.dropToTree}"  update="westFRM mainFRM" oncomplete="initDND()"/>
-                    <p:remoteCommand name="dropToTable"  actionListener="#{_bean.dropToTable}" update="westFRM mainFRM" oncomplete="initDND()"/>
-                    <p:remoteCommand name="dropToNavig"  actionListener="#{_bean.dropToNavig}" update="westFRM mainFRM" oncomplete="initDND()"/>                           
 
                     <ui:insert name="btnDisplayNone" />
 
