--- a/escom-bpm-web/src/main/webapp/view/users/user-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/user-card.xhtml
@@ -141,6 +141,7 @@
                              disabled="#{_bean.isReadOnly()}"
                              onchange="return itemChange = 1;"
                              required="#{param['isRequired'] == 'true'}"
+                             requiredMessage="#{bundle.Field} [#{bundle.password}] #{bundle.MustBeFilled}"
                              valueChangeListener="#{userCardBean.onChangePassword}"
                              onkeypress="checkEsc();">
                 </p:inputText>
